--- a/views/index.html
+++ b/views/index.html
@@ -22,6 +22,7 @@
 
 	ga('create', 'UA-190127841-1', 'auto');
 	ga('send', 'pageview');
+	ga("send", "event", like, click);
 	</script>
 	<!-- End Google Analytics -->
 
