--- a/views/index.html
+++ b/views/index.html
@@ -21,8 +21,8 @@
 	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
 	ga('create', 'UA-190127841-1', 'auto');
+	ga('require', 'OPT-PHSPJFV')
 	ga('send', 'pageview');
-	ga("send", "event", like, click);
 	</script>
 	<!-- End Google Analytics -->
 
